[package]
name = "memory-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.2.1"
rand = "0.8.5"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html